# heavy_quark_analysis

./: .gitignore  CMakeLists.txt  fit_all_inclusive_Ds.cpp  functions_heavy_quarks.cpp  functions_heavy_quarks.hpp  heavy_quarks.cpp  inclusive_decay.cpp  inclusive_disc_decay.cpp  plateaux.txt  run.sh  test_Emax_HLT.cpp
Meson_masses_clover/: _quarto.yml  cB211.072.48_dGamma.qmd  cB211.072.64_HLT.qmd  cB211.072.64_PRACE.qmd  cB211.072.64_bounding.qmd  cB211.072.64_dGamma.qmd  cB211.072.64_disc.qmd  cB211.072.64_inclusive.qmd  cB211.072.64_masses.qmd  cB211.072.96_dGamma.qmd  cC211.06.80_dGamma.qmd  cD211.054.96_dGamma.qmd  cE211.044.112_dGamma.qmd  check_Emax.qmd  checks_sigma_extrapolation.qmd  continuum_limit_dGamma.qmd  cross_check_cB211.072.64_th6_t48_64.qmd  index.qmd  masses.qmd  mathjax.html  overview_dGamma.qmd  scratch_area.qmd  stability.qmd  volume.qmd
Meson_masses_clover/app/: app.R
Meson_masses_clover/rsconnect/bookdown.org/marcogarofalo31/: inclusive_decay.dcf
gprof_build/: do_cmake.sh
